added the app build files

--- a/src/app/dashboard/data-table/data-table.component.scss
+++ b/src/app/dashboard/data-table/data-table.component.scss
@@ -31,7 +31,7 @@ table {
 
 .mat-header-cell,
 .mat-cell {
-    color: map-get($app-accent, 300);
+    // color: map-get($app-accent, 300);
     padding: 8px 16px;
 }
 
